# colcon-coveragepy-result

./: README.md  setup.cfg  setup.py  stdeb.cfg
.github/workflows/: publish.yml  tag.yml  test.yml
colcon_coveragepy_result/: __init__.py
colcon_coveragepy_result/task/: coveragepy.py
colcon_coveragepy_result/verb/: __init__.py  coveragepy_result.py
test/: spell_check.words  test_copyright_license.py  test_flake8.py  test_spell_check.py
