[metadata]
name = colcon-coveragepy-result
version = attr: colcon_coveragepy_result.__version__
url = https://colcon.readthedocs.io
project_urls =
  Changelog = https://github.com/colcon/colcon-coveragepy-result/milestones?state=closed
  GitHub = https://github.com/colcon/colcon-coveragepy-result/
author = Christophe Bedard
author_email = bedard.christophe@gmail.com
maintainer = Christophe Bedard
maintainer_email = bedard.christophe@gmail.com
classifiers =
  Development Status :: 3 - Alpha
  Environment :: Console
  Environment :: Plugins
  Intended Audience :: Developers
  License :: OSI Approved :: Apache Software License
  Operating System :: MacOS
  Operating System :: Microsoft :: Windows
  Operating System :: POSIX
  Programming Language :: Python
  Topic :: Software Development :: Build Tools
license = Apache License, Version 2.0
description = colcon extension for collecting coverage.py results
long_description = file: README.md
long_description_content_type = text/markdown
keywords = colcon, coverage

[options]
python_requires = >=3.6
install_requires =
  colcon-core
  coverage
packages = find:
zip_safe = false

[options.extras_require]
test =
  flake8>=3.6.0
  flake8-blind-except
  flake8-builtins
  flake8-class-newline
  flake8-comprehensions
  flake8-deprecated
  flake8-docstrings
  flake8-import-order
  flake8-quotes
  pep8-naming
  pylint
  pytest
  pytest-cov
  scspell3k>=2.2

[options.packages.find]
exclude =
  test
  test.*

[options.entry_points]
colcon_core.verb =
  coveragepy-result = colcon_coveragepy_result.verb.coveragepy_result:CoveragePyResultVerb

[tool:pytest]
markers =
  flake8
  linter

[flake8]
import-order-style = google
max-line-length = 99
